--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
-/* App.css */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: #adadad;
+    font-family: "Playwrite FR Moderne", cursive, Arial, Helvetica, sans-serif;
   }
   
   .app {
@@ -15,6 +17,7 @@ body {
   h1 {
     text-align: center;
     margin-bottom: 20px;
+    color: rgb(248, 147, 46);
   }
   
   form {
@@ -24,49 +27,41 @@ body {
   input[type='text'] {
     padding: 8px;
     font-size: 16px;
-    width: 70%;
+    width: 85%;
   }
   
   button {
     padding: 8px 16px;
     font-size: 16px;
-    cursor: pointer;
+    cursor:pointer ;
   }
   
   .image-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-auto-rows: auto;
-    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
+    gap: 25px;
   }
   
   .card {
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
+    border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+  }
+  
+  .card:hover {
+    transform: translateY(-10px);
   }
   
   .card img {
     width: 100%;
-    height: 200px;
-    object-fit: cover;
+    height: 300px;
+    border-radius: 10px 10px 0 0;
   }
   
   .card-info {
     padding: 10px;
-    background-color: #fff;
-  }
-  
-  .card-info h3 {
-    margin: 0;
-    font-size: 16px;
-  }
-  
-  .card-info p {
-    margin: 5px 0 0;
-    font-size: 14px;
-    color: #666;
+    background-color: #f0f0f0;
+    border-radius: 0 0 10px 10px;
   }
   
